LinksUpdated some links

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 										<li title='Instagram'><a href="#" class="icon brands fa-instagram"><span
 													class="label">Instagram</span></a></li>
 										<li title='LinkedIn'><a
-												href="https://www.linkedin.com/in/advait-jain-b9596821b/"
+												href="https://www.linkedin.com/in/advaitj/"
 												class="icon brands fa-linkedin-in"><span
 													class="label">LinkedIn</span></a></li>
 										<li title='
