index.html : fixed some typo
Fixed some typo in the index.html file and added a new image to it

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Adavit Devport </title>
+	<title>Advait Devport </title>
 	<link rel="icon " type="image/x-icon" href="images/favicon.ico">
 	<link rel="manifest" href="/site.webmanifest">
 
@@ -50,16 +50,17 @@
 		<!-- projects -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/ben-kolde-bs2Ba7t69mM-unsplash.jpg"
-						alt="a laptop with text written 'I design and develop experiences that make people's lives simple' "
+				<a href="#" class="image"><img src="images/dev3.jpg" alt="a laptop with text written some code"
 						data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Hello there World ,</h2>
-						<p>I am an Undergrad Student based in Delhi , who loves solving puzzles and riddles , even like
-							paradoxs .</p>
+						<p>I am an Undergrad Student based in Delhi.
+							<br> I who loves solving puzzles and riddles ,
+							My other hobbies are to play guitar and do some coding .
+						</p>
 						<ul class="actions">
-							<li><a href="#.html" class="button">Learn more</a></li>
+							<li><a href="https://github.com/Zoronium/Zoronium" class="button">More About Me </a></li>
 						</ul>
 					</div>
 				</div>
@@ -126,20 +127,22 @@
 						<section>
 							<span class=" icon line major brands fa-python "></span>
 							<h3>Python </h3>
-							<p>I am a intermediate dev in python .</p>
+							<p>I am a intermediate Level Developer for Python .</p>
 						</section>
 						<section>
 							<span class="icon solid major brands fa-rust"></span>
 							<h3>Rust Lang</h3>
 
-							<p>i am highly intrested in this new lang which is both fast and safe at the same time.</p>
+							<p>I am hughly intrested in this new lang which is both fast and safe at the same time.</p>
 						</section>
 						<section>
 							<span class="icon dualtone major brands fa-linux"></span>
 							<h3>Linux</h3>
 							<p>I have been using linux and running my projects to see their cross compatibility .
-								<br> I have used : <br> <i class=" major fa-brands fa-ubuntu "> Ubuntu </i>
-								<br> <i class=" major fa-brands fa-centos "> Centos </i>
+								<br> I have used : <br> <b class=" major fa-brands fa-ubuntu "> <a
+										href="https://ubuntu.com/">Ubuntu</a> </b>
+								<br> <b class=" major fa-brands fa-centos "> <a
+										href="https://www.centos.org/">Centos</a> </b>
 							</p>
 						</section>
 						<section>
@@ -155,11 +158,18 @@
 								and react .</p>
 						</section>
 						<section>
+							<span class="icon solid major fa-terminal"></span>
+							<h3>Terminal And Bash</h3>
+							<p>I have a basic knowlage of Bash Shell and have been using the cli tools to run the shell
+								.</p>
+						</section>
+						<section>
 							<span class="icon solid major fa-code-branch"></span>
 							<h3>GitHub And GIT</h3>
 							<p>I have a basic knowlage of git version control and have been using it to keep track of my
 								projects.</p>
 						</section>
+
 						<section>
 							<span><img
 									style="position: relative; right: 70px; background-color: white; border-radius: 100%; margin: 5px;"
@@ -168,10 +178,11 @@
 							<div style="position: relative; top:-40px;">
 								<h3>Django</h3>
 								<!--<progress id="file" value="65" max="100"> 32% </progress> -->
-								<p>I have made a small but powerfull Clone of <a
+								<p>I making a small but powerfull Clone of <a
 										href="https://www.netflix.com">NETFLIX</a><img
-										src="https://img.icons8.com/bubbles/50/000000/netflix.png" height="35px" alt="">
-									with django and react/js .</p>
+										src="https://img.icons8.com/bubbles/32/000000/netflix.png" height="30px" alt="">
+									with django and react/js .
+									stay tuned</p>
 
 							</div>
 						</section>
@@ -231,14 +242,16 @@
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<span>(000) 000-0000</span>
+									<span>Please Dm me to get contact details or Complete the side form.</span>
+
 								</li>
 								<li>
 									<h3>Social</h3>
 									<ul class="icons">
 										<li title='github'><a href="https://github.com/Zoronium/"
 												class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li title='Instagram'><a href="#" class="icon brands fa-instagram"><span
+										<li title='Instagram'><a href="https://instagram.com/"
+												class="icon brands fa-instagram"><span
 													class="label">Instagram</span></a></li>
 										<li title='LinkedIn'><a
 												href="https://www.linkedin.com/in/advait-jain-b9596821b/"
@@ -248,6 +261,9 @@
 										Discord 
 Discord ID = !Z0R0!#3170
 										 '><a href="https://discord.com/channels/" class="icon brands fa-discord"><span class="label"></span></a>
+										</li>
+										<li title='github'><a href="https://twitter.com/A_like_code"
+												class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 										</li>
 									</ul>
 								</li>
@@ -265,7 +281,8 @@ Discord ID = !Z0R0!#3170
 			<ul class="menu">
 				<li><a href="#intro">Back to the top </a> </li>
 				<li>Images : <a href="https://www.unsplash.com/">UNsplash</a></li>
-				<li>reffence from html5up</li>
+				<li>refrence from html5up.com</li>
+				<li class="fa-brands fa-github"> Built with GitHub pages</li>
 			</ul>
 		</div>
 	</footer>
