--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						alt=" just a laptop with some code  " data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>My Pojects On Github</h2>
+						<h2>My Projects On Github</h2>
 						<p>Here are all the projects i have worked upon and each One is diffrent and more pojects are
 							comming here soon.</p>
 						<ul class="actions">
