--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 		<div class="image-container"><img src="https://avatars.githubusercontent.com/u/89680252?v=4" alt="Advait Jain">
 		</div>
 		<h1>@AdvaitJain</h1>
+		<div>
+			<p style="text-align: center;">
+				Hello I am Advait Jain
+				<br /> [ aka <span style="color: steelblue;">@Zoronium</span> ] , <br /><br />
+				I am Growing Dev and a student
+				<br />
+				Feel free to conect with me <br />
+				Lets disscuss the next Unicorn
+			</p>
+		</div>
 		<a class="tile" href="https://www.github.com/Zoronium">
 			<div class="icon">
 				<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 50 50">
@@ -88,15 +98,15 @@
 		<a href="https://zoronium.hashnode.dev/" class="tile">
 			<div class="icon"><img src="https://img.icons8.com/3d-fluency/44/null/megaphone.png" /></div>
 			<p>Blog</p>
-			<div class="tile-share" link="https://zoronium.hashnode.dev/"><svg width="16" height="16" viewBox="0 0 16 16" enable-background="new 0 0 24 24"
-					class="sc-gKsewC iPWGYb">
+			<div class="tile-share" link="https://zoronium.hashnode.dev/"><svg width="16" height="16"
+					viewBox="0 0 16 16" enable-background="new 0 0 24 24" class="sc-gKsewC iPWGYb">
 					<path fill-rule="evenodd" clip-rule="evenodd"
 						d="M10.6464 3.85347L11 4.20702L11.7071 3.49992L11.3536 3.14636L8.35355 0.146362H7.64645L4.64645 3.14636L4.29289 3.49992L5 4.20702L5.35355 3.85347L7.5 1.70702V9.49992V9.99992H8.5V9.49992V1.70702L10.6464 3.85347ZM1 5.49994L1.5 4.99994H4V5.99994H2V14.9999H14V5.99994H12V4.99994H14.5L15 5.49994V15.4999L14.5 15.9999H1.5L1 15.4999V5.49994Z"
 						fill="currentColor"></path>
 				</svg></div>
 
 		</a>
-		
+
 	</div>
 	<script type="text/javascript" src="app.js"></script>
 </body>
